js/js.translator/testData/incremental/invalidation/openClassWithInternalField/lib1/A.3.kt
abstract class A {
    internal var prop: Int = 3
    internal fun func(): Int = 3
}
